# claire

./: .env.example  .gitignore  AWS_SETUP.md  README.MD  README.md  docker-compose.aws.yaml  docker-compose.yaml  example.json  example_file.json  example_insights.json  example_transactions.json  summary.md
.github/workflows/: ci.yaml
apps/backend/: .dockerignore  Dockerfile  README.md  config.py  main.py  pyproject.toml
apps/backend/api/v1/: api.py  chatbot.py  file_uploads.py  goals.py  insights.py  query_transactions.py  users.py
apps/backend/models/: banking_transaction.py  base.py  database.py  financial_insight.py  goal.py  session.py  thread.py  user.py  user_upload.py
apps/backend/schemas/: chat.py  graph.py  transaction_category.py
apps/backend/services/ai_agent/: __init__.py  transaction_analyzer.py
apps/backend/services/db/: postgres_connector.py
apps/backend/services/document_parser/: financial_text_extractor.py
apps/backend/services/langgraph_agent/: graph.py
apps/backend/services/langgraph_agent/prompts/: system.md
apps/backend/services/langgraph_agent/tools/: __init__.py  query_goals.py
apps/backend/services/object_store/: minio_connector.py
apps/backend/utils/: formatting.py  graph.py
apps/web/: .dockerignore  Dockerfile  package-lock.json  package.json  proxy.ts
apps/web/app/: layout.tsx
apps/web/components/: AppSidebar.tsx  Chat.tsx  Goals.tsx  SankeyDiagram.tsx  ScopeSelector.tsx  Summary.tsx  UploadForm.tsx
apps/web/lib/: api.ts  goals-data.ts
apps/web/types/: scope.ts
postgres/: init.sql
(+13 files in other folders)
