[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
    "pdfplumber>=0.11.0",
    "pypdf2>=3.0.0",
    "openpyxl>=3.1.0",
]
